# ethdebug-converter

./: README.md  pyproject.toml
examples/Counter/: Counter.sol
examples/Counter/0.5.0/: output.json
examples/Counter/0.6.0/: output.json
examples/Counter/0.7.0/: output.json
examples/Counter/0.8.0/: ._output.json  output.json
examples/Counter/0.8.30/: output.json
examples/TaxCalculator/: TaxCalculator.sol
examples/TaxCalculator/0.7.0/: output.json
examples/TaxCalculator/0.8.0/: output.json
examples/TaxCalculator/0.8.30/: output.json
src/ethdebug_converter/: __init__.py  cli.py  converter.py  parser.py
