[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethdebug-converter"
version = "0.1.0"
description = "Convert old Solidity source mappings to Ethdebug format"
authors = [{name = "ethdebug-converter"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ethdebug-converter = "ethdebug_converter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
    "ruff>=0.0.250"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ethdebug_converter = ["py.typed"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 100
target-version = "py38"